--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
     <head>
         <title>Play</title>
-        
+        <link rel="stylesheet" href="cplayerg.css">
     </head>
     <body>
         <cplayer src="mp3/Haal - E - Dil (Male)(MyMp3Song).mp3"></cplayer>
            
         <cplayer src="mp3/Music/Kheech Meri Photo(MyMp3Song).mp3"></cplayer>
+
        <script type="text/javascript" src="play.js"></script>
     </body>
 </html>
