--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
     <head>
         <title>Play</title>
         <link rel="stylesheet" href="cplayerg.css">
+		<style>
+		.pd{
+		width: 400px;
+		}
+		
+		</style>
     </head>
     <body>
-        <cplayer src="mp3/Haal - E - Dil (Male)(MyMp3Song).mp3"></cplayer>
-           
-        <cplayer src="mp3/Music/Kheech Meri Photo(MyMp3Song).mp3"></cplayer>
-
-       <script type="text/javascript" src="play.js"></script>
+	<div class="pd">
+        <cplayer src="http://localhost/test/cplayer1/mp3/01%20-%20Gold%20Tamba%20(320%20Kbps)%20-%20DownloadMing.SE.mp3"></cplayer>
+	</div>
+       <script type="text/javascript" src="play.js"></script>	   
     </body>
 </html>
