--- a/index.html
+++ b/index.html
@@ -5,15 +5,30 @@
         <link rel="stylesheet" href="cplayerg.css">
 		<style>
 		.pd{
-		width: 400px;
+        width: 400px;
+        margin: 50px;
 		}
 		
 		</style>
     </head>
     <body>
 	<div class="pd">
-        <cplayer src="http://localhost/test/cplayer1/mp3/01%20-%20Gold%20Tamba%20(320%20Kbps)%20-%20DownloadMing.SE.mp3"></cplayer>
-	</div>
+
+        <cplayer src="http://www.bharatwap.com/upload_file/2983/3142/3148/Aashiq%20Banaya%20Aapne-(BharatWap.com).mp3" autoplay="true"></cplayer>
+</div>
+<div class="pd">
+        <!-- <cplayer src="http://www.bharatwap.com/upload_file/2983/3142/3148/Tinka%20Tinka%20-%20Karam-(BharatWap.com).mp3" ></cplayer> -->
+
+
+    </div>
+    
+    <cplayer src="http://localhost/cplayer/mp3/Haal - E - Dil (Male)(MyMp3Song).mp3" ></cplayer>
+
+        <cplayer src="http://localhost/cplayer/mp3/Music/Amar Sonar Moina Pakhi-(KingBoss.In).mp3" ></cplayer>
+
+        <cplayer src="http://localhost/cplayer/mp3/Music/Bolo Har Har Har(MyMp3Song).mp3" ></cplayer>
+
+
        <script type="text/javascript" src="play.js"></script>	   
     </body>
 </html>
