--- a/test/index.html
+++ b/test/index.html
@@ -2,58 +2,51 @@
 <html>
     <head>
         <title>Play</title>
-        <link rel="stylesheet" href="../src/css/cplayer.css">
+        <link rel="stylesheet" href="http://localhost/test/cplayer/src/css/cplayer.css">
 		
     </head>
     <body>
-
-<div>
-    <h4>Playlist</h4>
-    <button onclick="playNow(playlist[0])">Solo Song</button><br/>
-    <a href="javascript:" onclick="playNow(playlist[1])">Bom bhole Song</a><br/>
-    <a href="javascript:" onclick="playNow(playlist[2])">Nazar</a><br/>
-    <a href="javascript:" onclick="playNow(playlist[3])">ek number</a><br/>
-    <a href="javascript:" onclick="playNow(playlist[4])">gulabi</a><br/>
+<a href="video.html">video</a>
+<h4>Playlist</h4>  
+<div id="playlist">     
 </div>
 
+<script type="text/javascript" src="http://localhost/test/cplayer/src/audio/play.js"></script>	
 
-<br/><br/><br/><br/>
-<a href="video.html">video</a>
-<script type="text/javascript" src="../src/audio/play.js"></script>	  
 <script>
-   
-var playlist = [
-    {
-        src: "http://www.bharatwap.com/upload_file/2983/3142/3145/Hum%20Bhool%20Gaye%20-%20Souten%20Ki%20Beti-(BharatWap.com).mp3",
-        img:'',
-        title: 'Solo Song'
-    },
-    {
-        src: "http://www.bharatwap.com/upload_file/2983/3142/3146/Har%20Dil%20Jo%20Pyar%20Karega-(BharatWap.com).mp3",
-        img:'https://image.shutterstock.com/image-vector/illustration-lord-shiva-indian-god-450w-384365731.jpg',
-        title: 'Bom bhole Song'
-    },
-    {
-        src: "http://localhost:3000/audio/mp3/NazarNaLagJaaye_STREE.ts",
-        img:'',
-        title: 'nazar Song'
-    },
-    {
-        src: "http://localhost:3000/audio/music/Ek Number(MyMp3Song).ts",
-        img:'',
-        title: 'Ek Number'
-    },
-    {
-        src: "http://localhost:3000/audio/music/Gulabi(MyMp3Song).ts",
-        img:'',
-        title: 'Gulabi'
-    },
-]
+ playlist = [];
+function renderList(){
+	var html = '';
+	
+	Object.keys(playlist).forEach(function (item) {
+	
+		html += '<div><img src="'+ playlist[item].list[0].img +'" width="80px"><h4>' + playlist[item].album + '</h4></div>';
+		Object.keys(playlist[item].list).forEach(function (listNum) {
+		var list = playlist[item].list[listNum];
+		console.log( list );
+			html += '<p><a href="javascript:" onclick="playNow( playlist['+ item +'].list['+listNum+'] )">'+ list.title+'</a></p>';
+		});
+	});
+	document.getElementById('playlist').innerHTML = html;
+}
 
-// addpaylist( playlist )
+function loadXMLDoc() {
+  var xhttp = new XMLHttpRequest();
+  xhttp.onreadystatechange = function() {
+    if (this.readyState == 4 && this.status == 200) {
+      // document.getElementById("demo").innerHTML =  this.responseText;
+	  playlist = JSON.parse(this.responseText);
+	  renderList();
+    }
+  };
+  xhttp.open("GET", "http://192.168.11.170/mp3/", true);
+  xhttp.send();
+}
+
+loadXMLDoc();
+
 
 </script>
-
  
     </body>
 </html>
