--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Play</title>
-        <link rel="stylesheet" href="http://localhost/test/cplayer/src/css/cplayer.css">
+        <link rel="stylesheet" href="http://localhost/cplayer/src/css/cplayer.css">
 		
     </head>
     <body>
@@ -11,8 +11,8 @@
 <h4>Playlist</h4>  
 <div id="playlist">     
 </div>
-
-<script type="text/javascript" src="http://localhost/test/cplayer/src/audio/play.js"></script>	
+<div style="height: 100px"></div>
+<script type="text/javascript" src="http://localhost/cplayer/src/audio/play.js"></script>	
 
 <script>
  playlist = [];
